# snake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.md  README.md
cmake/: PostBuild.cmake  SetupLibs.cmake  SetupSDL.cmake  Version.hpp.in
data/: constants.json
res/config/: options_presets.json  user_config.json
res/data/: constants.json  highscores.json
src/: main.cpp
src/Abstract/: Observer.hpp  Subject.hpp
src/Constants/: Constants.cpp  Constants.hpp
src/Data/: DataManager.cpp  DataManager.hpp
src/Game/: Constants.cpp  Constants.hpp  Game.cpp  Game.hpp  GameContext.cpp  GameContext.hpp  GameObjects.cpp  GameObjects.hpp  Grid.cpp  Grid.hpp  Snake.cpp  Snake.hpp  UI.cpp  UI.hpp
src/Game/GameObjects/: Food.cpp  Food.hpp  GameObjects.cpp  GameObjects.hpp  Grid.cpp  Grid.hpp  Snake.cpp  Snake.hpp
src/Game/GameState/: GameState.cpp  GameState.hpp  LoseState.cpp  LoseState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.hpp  StartState.cpp  StartState.hpp
src/Highscores/: HighscoreManager.cpp  HighscoreManager.hpp
src/Options/: OptionsManager.cpp  OptionsManager.hpp
src/Scenes/: GameplayScene.cpp  GameplayScene.hpp  HighscoresScene.cpp  HighscoresScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  OptionsScene.cpp  OptionsScene.hpp  SaveHighscoreScene.cpp  SaveHighscoreScene.hpp  Scene.hpp
src/UI/: GameplaySceneUI.cpp  GameplaySceneUI.hpp  MainMenuSceneUI.cpp  MainMenuSceneUI.hpp  SceneUI.cpp  SceneUI.hpp  UI.cpp  UI.hpp  UICommand.hpp  UIManager.cpp  UIManager.hpp
src/UI/Common/: UIButton.cpp  UIButton.hpp
src/UI/Gameplay/: GameplaySceneUI.cpp  GameplaySceneUI.hpp
src/UI/Highscores/: HighscoresSceneUI.cpp  HighscoresSceneUI.hpp
src/UI/MainMenu/: MainMenuSceneUI.cpp  MainMenuSceneUI.hpp  MainMenuSceneUIButton.cpp  MainMenuSceneUIButton.hpp
src/UI/Options/: OptionsSceneUI.cpp  OptionsSceneUI.hpp
src/UI/SaveHighscore/: SaveHighscoreSceneUI.cpp  SaveHighscoreSceneUI.hpp
